sample-api/blue-green/sample-api-rollout.yaml

apiVersion: argoproj.io/v1alpha1  
kind: Rollout 
# ==== 이 아래의 내용은 기존 Deployment와 동일하게 작성 ====
metadata:
  name: sample-api-rollout
  namespace: api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sample-api
  template:
    metadata:
      labels:
        app: sample-api
    spec:
      containers:
      - name: sample-api
        image: skaqud/sample-api
        ports:
        - name: http
          containerPort: 8080
  minReadySeconds: 30
  revisionHistoryLimit: 3
# ==== 이 위의 내용은 기존 Deployment와 동일하게 작성 ====  
  strategy:
    blueGreen:
      # activeService는 Green이 Blue로 승격 시 새 템플릿 해시로 업데이트 할 Service를 지정한다.
      # 이 필드는 blueGreen 업데이트 전략에 필수값이다.    
      activeService: sample-api-active
      # previewService는 Green이 Blue로 승격 되기 전에 새 템플릿 해시로 업데이트 할 Service를 지정한다.
      # 이를 통해 프로덕션 트래픽을 제공하지 않고 미리보기 스택을 통해 테스트 해볼 수 있다.
      # 이 필드는 선택 사항이다.
      previewService: sample-api-preview
      # autoPromotionEnabled는 승격 직전에 롤아웃을 일시 중지하여 새 스택의 승격을 자동으로 비활성화한다.
      # 이 옵션을 생략하면 기본 동작은 ReplicaSet이 완전히 준비/사용 가능한 즉시 새 스택을 승격시킨다.
      # 이 옵션을 true로 설정 한다면, 다음 명령어를 사용하여 롤아웃을 재개 할 수 있다. 
      autoPromotionEnabled: false
      previewReplicaCount: 1
      scaleDownDelaySeconds: 60
