sample-api/blue-green/sample-api-svc-active.yaml
######### 
# Service
#########


apiVersion: v1
kind: Service
metadata:
  name: sample-api-active
  namespace: api
  labels:
    app: sample-api
spec:
  selector:
    app: sample-api
  
  ports:
  - protocol: TCP
    name: http
    port: 8080
    targetPort: http
#    nodePort: 30001
 # type: LoadBalancer
