sample-api/blue-green/sample-api-svc-preview.yaml
######### 
# Service
#########


apiVersion: v1
kind: Service
metadata:
  name: sample-api-preview
  namespace: api
  labels:
    app: sample-api
spec:
  selector:
    app: sample-api
  
  ports:
  - protocol: TCP
    name: http
    port: 9090
    targetPort: http
#    nodePort: 30001
#  type: LoadBalancer
